repo para sergio

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,21 @@
-<accordion
-    [options]="options" 
-    [menus]="array">
-    <app-tree-view [data]="array[0].submenu"></app-tree-view>
-</accordion>
+<app-collapsible-wrapper [itemsToCollapse]="menus">
+    <ng-template>
+      facundo
+      <br>
+      facundo
+      <br>
+      facundo
+      <br>
+      facundo
+      <br>
+      facundo
+      <br>
+      facundo
+      <br>
+      facundo
+      <br>
+      facundo
+      <br>
+      </ng-template>
+</app-collapsible-wrapper>
+
