--- a/src/app/accordion/accordion.component.html
+++ b/src/app/accordion/accordion.component.html
@@ -1,17 +1,25 @@
 <ul id="accordion" class="accordion" >
-    <li [class.active]="menus[0].active">
-      <div class="menu" (click)="toggle2()">
-        {{menus[0].name}}
-        <i [class]="menus[0].iconClass"></i>
-        <i class="fa fa-chevron-down"></i>
-      </div>
-      <ul class="submenu" #submenu
-      [style.height.px]="menus[0].active ? submenu.scrollHeight : 0">
-      <li>
-        <ng-content>
-          
-        </ng-content>
-        </li>
-      </ul>
-    </li>
+  <li *ngFor="let menu of menus; let i = index" 
+    [class.active]="menu.active">
+    <div class="menu" (click)="toggle(i)">
+      <i [class]="menu.iconClass"></i>
+      {{ menu.name }}
+      <i class="fa fa-chevron-down"></i>
+    </div>
+    <ul class="submenu" #submenu 
+      [style.height.px]="menu.active ? submenu.scrollHeight : 0">
+      <li *ngFor="let submenu of menu.submenu">
+        <a *ngIf="!submenu.submenu">
+        {{ submenu.name }}
+        </a>
+
+      <accordion
+      [options]="options" 
+      [menus]="submenu?.submenu">
+      </accordion>
+
+      </li>
+    </ul>
+
+  </li>
 </ul>
