--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-collapsible-wrapper [itemsToCollapse]="menus">
+<app-collapsible-wrapper [itemsToCollapse]="data">
     <ng-template>
       facundo
       <br>
@@ -18,4 +18,6 @@
       <br>
       </ng-template>
 </app-collapsible-wrapper>
+
+
 
